--- a/ClassUpdates/FinalPresentation/References/BibdotBib.bib
+++ b/ClassUpdates/FinalPresentation/References/BibdotBib.bib
@@ -4,3 +4,9 @@
       author = {Malik, AD},
       title = {More Effective and Cost Effective Use of the PHQ-9},
       year = {TBD}}
+
+@misc{RaheelShaikh_2018, title={Cross Validation Explained: Evaluating estimator performance.}, url={https://towardsdatascience.com/cross-validation-explained-evaluating-estimator-performance-e51e5430ff85}, journal={Medium}, publisher={Towards Data Science}, author={Raheel Shaikh}, year={2018}, month={Nov} }
+
+@book{Wehrens_Maintainer_2019, title={Package “kohonen” Title Supervised and Unsupervised Self-Organising Maps}, url={https://cran.r-project.org/web/packages/kohonen/kohonen.pdf}, author={Wehrens, Ron and Maintainer, Johannes}, year={2019} }
+
+
