--- a/ClassUpdates/FinalPresentation/References/References.Rmd
+++ b/ClassUpdates/FinalPresentation/References/References.Rmd
@@ -27,6 +27,10 @@ knitr::opts_chunk$set(echo=FALSE,
 
 [@MalikMoreEf]
 
+[@RaheelShaikh_2018]
+
+[@Wehrens_Maintainer_2019]
+
 \bibliography{BibdotBib}
 
 
