5-10 am push final project

--- a/WriteUps/Outline/Bib_AccRefSheet.bib
+++ b/WriteUps/Outline/Bib_AccRefSheet.bib
@@ -28,3 +28,7 @@
       author = {Malik, AD},
       title = {More Effective and Cost Effective Use of the PHQ-9},
       year = {TBD}}
+
+@misc{STHDA_2020, url={http://www.sthda.com/english/wiki/beautiful-dendrogram-visualizations-in-r-5-must-known-methods-unsupervised-machine-learning}, journal={Sthda.com}, year={2020} }
+
+
