PreFinal draft push

--- a/WriteUps/Outline/Bib_AccRefSheet.bib
+++ b/WriteUps/Outline/Bib_AccRefSheet.bib
@@ -29,6 +29,22 @@
       title = {More Effective and Cost Effective Use of the PHQ-9},
       year = {TBD}}
 
-@misc{STHDA_2020, url={http://www.sthda.com/english/wiki/beautiful-dendrogram-visualizations-in-r-5-must-known-methods-unsupervised-machine-learning}, journal={Sthda.com}, year={2020} }
+@misc{STHDA_2020,
+      url={http://www.sthda.com/english/wiki/beautiful-dendrogram-visualizations-in-r-5-must-known-methods-unsupervised-machine-learning},
+      journal={Sthda.com},
+      year={2020}
+}
 
+@book{Belavkin,
+      title={Lecture 13: Self-Organising Maps},
+      url={http://www.eis.mdx.ac.uk/staffpages/rvb/teaching/BIS3226/hand13.pdf},
+      author={Belavkin, Roman}
+}
 
+@misc{Tanner_2020,
+      title={Introduction to Self Organizing Maps in R - the Kohonen Package and NBA Player Statistics},
+      url={https://clarkdatalabs.github.io/soms/SOM_NBA},
+      journal={Github.io},
+      author={Tanner, Dan},
+      year={2020}
+}
